language/move-lang/tests/move_check/typing/native_structs_pack_unpack.exp
error[E03010]: unbound field
   ┌─ tests/move_check/typing/native_structs_pack_unpack.move:15:17
   │
 3 │     native struct T;
   │     ------ Struct declared 'native' here
   ·
15 │         let f = c.f;
   │                 ^^^ Unbound field 'f' for native struct '0x42::C::T'

error: 

   ┌── tests/move_check/typing/native_structs_pack_unpack.move:9:9 ───
   │
 9 │         C::T {}
   │         ^^^^^^^ Invalid argument usage for native struct '0x42::C::T'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed
   ·
 3 │     native struct T;
   │     ------ Declared 'native' here
   │

error: 

   ┌── tests/move_check/typing/native_structs_pack_unpack.move:9:9 ───
   │
 9 │         C::T {}
   │         ^^^^^^^ Invalid instantiation of '0x42::C::T'.
All structs can only be constructed in the module in which they are declared
   │

error: 

    ┌── tests/move_check/typing/native_structs_pack_unpack.move:12:13 ───
    │
 12 │         let C::T {} = c;
    │             ^^^^^^^ Invalid binding usage for native struct '0x42::C::T'. Native structs cannot be directly constructed/deconstructed, and their fields cannot be dirctly accessed
    ·
  3 │     native struct T;
    │     ------ Declared 'native' here
    │

error: 

    ┌── tests/move_check/typing/native_structs_pack_unpack.move:12:13 ───
    │
 12 │         let C::T {} = c;
    │             ^^^^^^^ Invalid deconstruction binding of '0x42::C::T'.
 All structs can only be deconstructed in the module in which they are declared
    │

error: 

    ┌── tests/move_check/typing/native_structs_pack_unpack.move:15:17 ───
    │
 15 │         let f = c.f;
    │                 ^^^ Invalid access of field 'f' on '0x42::C::T'. Fields can only be accessed inside the struct's module
    │

